@@ -7,6 +7,8 @@
 - ADD: Performance is now much better throughout the
        whole application. (Stefan)
 - ADD: Merging of two instead of just one URL. (Stefan)
+- ADD: Paths with short filenames now work too when
+       starting TortoiseProc from external programs. (Stefan)
 - CHG: When showing the log in the merge dialog, it will
        stop on the first copy. (Stefan)
 - CHG: The check for newer versions of TSVN is now
